--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ r:nth-child(3){
 r:nth-child(4){
   top: 5em; left: 3em;
 }*/
-.circle{float:right;
+.circle{float:right; position: relative;
     width:100px;
     height:100px;
     border-radius: 100%;
